--- a/Desktop/portfolio-master/portfolio/src/components/profile-card/profile-card.css
+++ b/Desktop/portfolio-master/portfolio/src/components/profile-card/profile-card.css
@@ -28,3 +28,9 @@
 .profile-card a {
 	text-decoration: none;
 }
+
+@media (max-width: 696px) {
+	.landing-page-a {
+		/* top: 70%; */
+	}
+}
