--- a/Desktop/portfolio-master/portfolio/src/components/social-media-nav/social-media-nav.css
+++ b/Desktop/portfolio-master/portfolio/src/components/social-media-nav/social-media-nav.css
@@ -5,7 +5,7 @@ nav {
 	display: flex;
 	justify-content: space-around;
     width: 100%;
-    margin: 10px;
+    margin: 10px 0;
 }
 
 .social-nav-btns.about-me {
